# hello-cwidget

./: Makefile.am  Makefile.in  NOTE  configure  configure.in  hello-cwidget.cc
debian/: changelog  control  copyright  rules
