#                                               -*- Autoconf -*- 
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([hello-cwidget], [20120922], [Nobuhiro Iwamatsu <iwmatsu@nigauri.org>])
AC_CONFIG_SRCDIR([hello-cwidget.cc])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX

# Checks for libraries.
PKG_CHECK_MODULES(SIGC, sigc++-2.0)
PKG_CHECK_MODULES(CWIDGET, cwidget)

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

AC_OUTPUT
AC_OUTPUT([Makefile])
